fixed z-index

--- a/style/style.css
+++ b/style/style.css
@@ -267,7 +267,7 @@ input[type=submit]:hover, .button:hover {
     transform: translateX(-50%) translateY(-250%);
     overflow: hidden;
     position: absolute;
-    z-index: 990;
+    z-index: 1002;
     left: 50%;
     top: 50%;
     transition: all .4s cubic-bezier(.14, .8, .4, 1);
@@ -284,7 +284,7 @@ input[type=submit]:hover, .button:hover {
 
 .usr-backdrop{
     position: absolute;
-    z-index: 989;
+    z-index: 1001;
     width: 100%;
     height: 100%;
     top: 0;
@@ -901,5 +901,10 @@ select * {
     .profile-img{
         height: 2rem;
         width: 2rem;
+    }
+
+    .usr-overlay{
+        width: 90%;
+        height: 90%;
     }
 }
